Add contact page, templates, style and wire it

--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -105,7 +105,7 @@
                         {% endif %}
                          <!-- Contacts -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-envelope"></i> Contact us</a>
+                            <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i> Contact</a>
                         </li>
                     </div>
 
