--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -49,6 +49,104 @@ body {
     grid-template-columns: auto auto auto auto;
 }
 
+/* -------------------------------------------------------------------- Admin section */
+
+.card-admin-wrapper {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 50px;
+    width: 80%;
+    margin: 50px auto;
+}
+
+.color-excursion {
+    background-color: #4cb4c7;
+}
+
+.color-rental {
+    background-color: #7abecc;
+}
+
+.color-user {
+    background-color: #7CD1C0;
+    color: var(--white);
+}
+
+/* Data tables */
+.data_table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #7CD1C0;
+    color: var(--white);
+    border: 1px solid var(--culture);
+    padding: 8px;
+}
+
+.data_table {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: var(--white);
+    margin: auto;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.data_table td {
+    font-family: sans-serif;
+    padding: 10px;
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+.table_wrapper tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.table_wrapper tr:hover {
+    background-color: #ddd;
+}
+
+.table_wrapper {
+    width: 90%;
+    margin: auto;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+
+}
+
+.delete_wraper {
+    width: 50%;
+    margin: 50px auto;
+}
+
+.delete_img {
+    width: 200px;
+}
+
+.thumbnail-form {
+    padding: 5px;
+    border-radius: 10px;
+    width: 100px;
+    height: 70px;
+    object-fit: cover;
+    cursor: pointer;
+    position: relative;
+    z-index: -1;
+}
+
+.x-delete {
+    color: red;
+    position: absolute;
+    background-color: var(--white);
+}
+
+/* admin form */
+.admin-form {
+    width: 800px;
+    margin: auto;
+}
+
 /* -------------------------------------------------------------------- home /excursion / rentals card */
 /* Slides */
 .home-banner h2 {
@@ -166,7 +264,8 @@ body {
     font-family: var(--font);
     font-weight: 600;
 }
-.ACCOM_type{
+
+.ACCOM_type {
     color: white;
     padding: 2px 30px;
     text-align: center;
@@ -174,16 +273,36 @@ body {
     font-size: 16px;
     border-radius: 10px;
 }
-.green{
-    background-color: #4CAF50; 
+
+.green {
+    background-color: #4CAF50;
 }
-.blue{
-    background-color: #008CBA; 
+
+.blue {
+    background-color: #008CBA;
 
 }
-.red{
-    background-color: #f44336; 
+
+.red {
+    background-color: #f44336;
 }
+/* ------------------------------------Cart */
+.cart{
+    position: relative;
+}
+.cart_quantity{
+    background-color: var(--orange-pantone);
+    width:25px;
+    height:25px;
+    border-radius: 50%;
+    position: absolute;
+    left:15px;
+    top:20px;
+    color:white;
+    line-height: 10px 50px;
+    padding-left: 8px;
+}
+
 
 /* ----------------Animation for home*/
 @keyframes typing {
@@ -200,24 +319,23 @@ body {
     }
 }
 
-.center{
+.center {
     margin: 100px auto;
-    width:200px;
+    width: 200px;
 }
 
 
-/* -------------------------------------------------------------------- forms */
-.add_excursions_form {
-    width: 800px;
-    margin: auto;
-}
+
+
+
 /* ------------------------------------------------------------------search classes */
 
-.no-result{
-margin-top:100px;
+.no-result {
+    margin-top: 100px;
 }
-.site-color{
-    color:var(--orange-pantone)
+
+.site-color {
+    color: var(--orange-pantone)
 }
 
 /* -------------------------------------------------------------------- detail page */
@@ -340,7 +458,7 @@ margin-top:100px;
     font-size: 30px;
 }
 
-.user_name{
+.user_name {
     top: -5px;
     position: relative;
     color: var(--black);
@@ -355,79 +473,80 @@ margin-top:100px;
 
 .review_content {
     color: rgb(15, 17, 17);
-  font-family: var(--font);
+    font-family: var(--font);
     font-size: 14px;
     margin: 0px;
     padding: 0px;
 }
 
 /* review form */
-.review-form{
-    width:300px;
-    margin:auto;
+.review-form {
+    width: 300px;
+    margin: auto;
 }
 
 .txt-center {
     text-align: center;
-  }
-  .hide {
+}
+
+.hide {
     display: none;
-  }
-  
-  .clear {
+}
+
+.clear {
     float: none;
     clear: both;
-  }
-  
-  .rating {
-      unicode-bidi: bidi-override;
-      direction: rtl;
-      text-align: center;
-      position: relative;
-      float: left;
-      line-height: 23px;
-  }
-  
-  .rating > label {
-      float: right;
-      display: inline;
-      padding: 0;
-      margin: 0;
-      position: relative;
-      width: 1.1em;
-      cursor: pointer;
-      color: var(--orange-pantone);
-      font-size: 25px;
-  }
-  
-  .rating > label:hover,
-  .rating > label:hover ~ label,
-  .rating > input.radio-btn:checked ~ label {
-      color: transparent;
-  }
-  
-  .rating > label:hover:before,
-  .rating > label:hover ~ label:before,
-  .rating > input.radio-btn:checked ~ label:before,
-  .rating > input.radio-btn:checked ~ label:before {
-      content: "\2605";
-      position: absolute;
-      left: 0;
-      color: var(--orange-pantone);
-  }
+}
 
-  .rating-container{
+.rating {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+    text-align: center;
+    position: relative;
+    float: left;
+    line-height: 23px;
+}
+
+.rating>label {
+    float: right;
+    display: inline;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    width: 1.1em;
+    cursor: pointer;
+    color: var(--orange-pantone);
+    font-size: 25px;
+}
+
+.rating>label:hover,
+.rating>label:hover~label,
+.rating>input.radio-btn:checked~label {
+    color: transparent;
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before,
+.rating>input.radio-btn:checked~label:before,
+.rating>input.radio-btn:checked~label:before {
+    content: "\2605";
+    position: absolute;
+    left: 0;
+    color: var(--orange-pantone);
+}
+
+.rating-container {
     display: grid;
     grid-template-columns: auto auto;
-    justify-content:start;
+    justify-content: start;
     grid-column-gap: 10px;
-  }
+}
 
-  .message{
+.message {
     text-align: center;
-    width:30%;
-     margin:auto;
-  }
+    width: 30%;
+    margin: auto;
+}
 
 /* -------------------------------------------------------------------- accounts signup/signin etc */
 
@@ -463,7 +582,13 @@ margin-top:100px;
 
 
 
-.btn:hover {
+.my_hover:hover {
+    color: var(--white);
+    background-color: var(--orange-pantone-lighter);
+    border-color: var(--white);
+}
+
+.my_hover:focus {
     color: var(--white);
     background-color: var(--orange-pantone-lighter);
     border-color: var(--white);
@@ -526,6 +651,150 @@ ul.socialaccount_providers {
     color: white;
 }
 
+/* -------------------------------------------------------------------- Contact page */
+.contact_wrapper {
+    clear: both;
+    overflow: hidden;
+    margin-bottom: 150px;
+  }
+  
+  .contact_form {
+    width: 500px;
+    height: 500px;
+    margin-top: 78px;
+    margin: auto;
+  }
+  
+  .contact_word {
+    font-size: 80px;
+    font-family: "noticia text", serif;
+    color: var(--orange-pantone-lighter);
+    text-align: center;
+    margin-top: 100px;
+  }
+  
+  .contact_form p {
+    color: var(--orange-pantone);
+    text-align: center;
+  }
+  
+  .contact_form .input-field[type=text],
+  .input-field[type=email] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 2px 0;
+    box-sizing: border-box;
+    color: var(--black);
+    background-color: var(--white);
+    font-family: "open sans", sans-serif;
+    font-size: 15px;
+    height: 40px;
+    border: none;
+  }
+  
+  .contact_form textarea {
+    width: 100%;
+    height: 200px;
+    padding: 5px 19px;
+    margin: 2px 0;
+    box-sizing: border-box;
+    color: black;
+    background-color: var(--white);
+    font-family: "open sans", sans-serif;
+    font-size: 15px;
+    resize: none;
+    border: none;
+  }
+  
+  .contact_form input[type=text]:hover,
+  .contact_form input[type=email]:hover,
+  .contact_form textarea:hover {
+    border: 1px solid var(--black);
+  }
+  
+  
+  textarea::placeholder {
+    color: var(--black);
+    font-family: "open sans", sans-serif;
+    font-size: 15px;
+  
+  }
+  
+  ::placeholder {
+    color: var(--black);
+    font-family: "open sans", sans-serif;
+    font-size: 15px;
+  }
+  
+  
+  .form_btn {
+    float: right;
+    border: none;
+    font-size: 14px;
+    color: var(--Granite-grey);
+    animation: change-btn-form-color 0.5s alternate infinite;
+  }
+  
+  .form_btn:hover {
+    color: var(--orange-pantone);
+    cursor: pointer;
+  }
+  
+  /* form animation for btn */
+  @keyframes change-btn-form-color {
+    0%{
+        color: var(--black);
+    }
+    100%{
+        color: var(--orange-pantone);
+    }
+}
+
+/* -------------------------------------------------------------------- email page comfirmation */
+.email_page-wrapper {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 100px;
+  }
+  
+  .sub-container {
+    max-width: 800px;
+    height: auto;
+    border-radius: 5px;
+    padding: 15px;
+  }
+
+  .sub-container p {
+    font-size: 18px;
+    font-family: "noticia text", serif;
+    color: var(--orange-pantone);
+  }
+  
+  .sub-container h1 {
+    font-family: "noticia text", serif;
+    color: var(--orange-pantone);
+  }
+  
+  .btn_email_sent {
+    background-color: var(--orange-pantone);
+    border: none;
+    color: var(--white);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+  
+  .btn_email_sent:hover {
+    color: var(--white);
+    background-color: var(--orange-pantone-lighter);
+  }
+  
+  .email_page-wrapper {
+    text-decoration: none;
+  }
 
 /* -------------------------------------------------------------------- Media queries */
 
@@ -623,6 +892,11 @@ ul.socialaccount_providers {
         font-size: 1rem;
     }
 
+    /* admin form */
+    .admin-form {
+        width: 700px;
+    }
+
 
 }
 
@@ -661,6 +935,36 @@ ul.socialaccount_providers {
         padding: 1.5rem;
         width: 400px;
     }
+
+      /* admin form */
+      .admin-form {
+        width: 90%;
+    }
+
+  /* contact page */
+
+  .contact_word {
+    font-size: 44px;
+    float: none;
+    margin: auto;
+    margin-top: 100px;
+    padding-left: 15px;
+  }
+
+  .contact_form {
+    width: 345px;
+    float: none;
+    margin: 29px auto;
+    overflow: hidden;
+  }
+
+  .form_btn {
+    border: none;
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+
 
 }
 
@@ -707,10 +1011,15 @@ ul.socialaccount_providers {
     .reviews {
         width: 90%;
     }
+
+    /* admin section */
+    .delete_img {
+        width: 100%;
+    }
 }
 
 
-/* Small devices (phones, 373px and down) */
+/* Small devices (phones, 503px and down) */
 @media only screen and (max-width: 503px) {
     .home-banner h2 {
         font-size: 40px;
@@ -751,11 +1060,24 @@ ul.socialaccount_providers {
         padding: 1.5rem;
         width: auto;
     }
-    
+
     /* review form */
-    .review-form{
-        width:260px;
-        margin:auto;
+    .review-form {
+        width: 260px;
+        margin: auto;
     }
 
 }
+
+/* very Small devices (phones, 373px and down) */
+@media only screen and (max-width: 373px) {
+    .contact_form {
+      width: 100%;
+      padding: 10px;
+    }
+  
+    .contact_word {
+      font-size: 30px;
+    }
+  
+  }
