--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,6 +48,34 @@ body {
     display: grid;
     grid-template-columns: auto auto auto auto;
 }
+/* --------------------------------------------------------------------  404 and 500 error page*/
+
+#error-404-container {
+  width: 50%;
+  margin: 10% auto;
+}
+
+.card img {
+  width: 400px;
+  margin: auto;
+}
+
+.links_for_404 {
+  font-size: 10px;
+  background-color: var(--deep-jungle-green);
+  padding: 15px 32px;
+  font-size: 16px;
+  cursor: pointer;
+  display: block;
+  width: auto;
+  margin: 50px auto;
+  color: var(--white);
+}
+
+.links_for_404:hover {
+  background-color: var(--viridian-green);
+  color: var(--white);
+}
 
 /* -------------------------------------------------------------------- Admin section */
 
