--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<section class="error-404-container">
+<section id="error-404-container">
     <h1 class="title">Page not found.</h1>
     <div class="card">
         <img src="{% static 'images/404.jpg' %}" alt="404 page">
