Add media queries for 404 error page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -177,6 +177,7 @@ body {
 }
 
 /* -------------------------------------------------------------------- home /excursion / rentals card */
+
 /* Slides */
 .home-banner h2 {
     font-family: "Qwitcher Grypen", sans-serif;
@@ -925,6 +926,13 @@ ul.socialaccount_providers {
     .admin-form {
         width: 700px;
     }
+
+   /* 404 error */
+  .card img {
+    width: 100%;
+    margin: auto;
+  }
+
 
 
 }
