--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -1,8 +1,33 @@
-{% extends 'base.html' %}
+{% extends 'excursions/excursions_base.html' %}
 {% load static %}
 
 {% block content %}
 <section>
-    <h6>cart</h6>
+    <div class="container mb-2" >
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4 text-center"> Shopping Cart</h2>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                {% if cart_items %}
+                <div class="table-responsive rounded"></div>
+                {% else %}
+                <p class="lead mb-5 text-center">Your cart is empty</p>
+                <a href="{% url 'excursions' %}" class="btn btn-outline-black rounded-o">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span class="text-uppercase"> Keep Shopping</span>
+                </a>
+                {% endif %}
+            </div>
+
+        </div>
+    </div>
 </section>
 {% endblock content %}
