Update context processor, template detail, and style

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -113,8 +113,14 @@
                       <!-- cart -->
                       <li class="nav-item cart">
                         <a class="nav-link" href="{% url 'cart' %}">
-                            <i class="fa-solid fa-cart-shopping"></i>
-                            <span class="cart_quantity">0</span>
+                            <button type="button" class="btn my_hover sear-btn btn-outline-secondary position-relative">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                  {% if total %}
+                                  £{{total | floatformat:2}}
+                                  {% else %}
+                                  £0.00
+                                  {% endif %}
+                              </button>
                         </a>
                     </li>
                 </ul>
