--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -15,7 +15,9 @@
         <div class="row">
             <div class="col">
                 {% if cart_items %}
-                <div class="table-responsive rounded"></div>
+                {% for i in cart_items %}
+                <div class="table-responsive rounded">{{i}}</div>
+                {% endfor %}
                 {% else %}
                 <p class="lead mb-5 text-center">Your cart is empty</p>
                 <a href="{% url 'excursions' %}" class="btn btn-outline-black rounded-o">
