--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -41,25 +41,27 @@
                         <!-- date -->
                         <div class="form-group mt-3">
                             <label for="date">Select Date and Travellers</label>
-                            <input type="date" class="form-control" id="date" name="excursion_date">
+                            <input type="date" class="form-control" id="date" name="excursion_date" required>
                         </div>
                         <!-- number of adults -->
                         <div class="form-group mt-3">
                             <label for="id_adult_qty">Adult (11-85 years old)</label>
-                            <input type="number" class="form-control" id="id_adult_qty" name="adult_qty" value="1" min="1" max="99" data-item_id="{{excursions.id}}">
+                            <input type="number" class="form-control" id="id_adult_qty" name="adult_qty" value="1" min="1" max="99" data-item_id="{{excursions.id}}" required>
                         </div>
                         <!-- number of childrens -->
                         <div class="form-group mt-3">
                             <label for="id_child_qty"> Child (3 - 10 years old)</label>
-                            <input type="number" class="form-control" id="id_child_qty" name="child_qty" value="1" min="1" max="99">
+                            <input type="number" class="form-control" id="id_child_qty" name="child_qty" value="0" min="0" max="99" >
                         </div>
                         <!-- pick up info -->
                         <div class="form-group mt-3">
                             <label for="inputCity">Place to be pick up</label>
-                            <input type="text" class="form-control" id="inputCity" name="place_pickup">
+                            <input type="text" class="form-control" id="inputCity" name="place_pickup" required>
                         </div>
                          <!-- hidden input to get the url-->
                         <input type="hidden" name="redirect_url" value="{{request.path}}">
+                          <!-- hidden input for the price-->
+                        <input type="hidden" name="price" value="{{excursions.Price}}">
 
                         <!-- form btn -->
                         <div class="form_detail_btn">
