Add subTotal in context processor, cart-humbnail img,table data in cart.htnl

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -321,6 +321,12 @@ body {
     position: relative;
 }
 
+.cart-humbnail img{
+    width: 150px;
+    object-fit: scale-down;
+}
+
+
 
 /* ----------------Animation for home*/
 @keyframes typing {
