--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -7,82 +7,86 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4 text-center"> Shopping Cart</h2>
+                <h2 class="logo-font mb-4 text-center"> <i class="fa-solid fa-cart-shopping site-default-color"></i>
+                    Shopping Cart</h2>
                 <hr>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col">
-                {% if cart_items %}
-                <div class="card p-3">
-                    <!-- table -->
-                    <table class="table table-sm table-borderless table-responsive rounded table">
-                        <thead class="text-black">
-                            <!-- table head -->
-                            <tr>
-                                <th scope="col">Excursion image</th>
-                                <th scope="col">Date selected</th>
-                                <th scope="col">Adult Qty</th>
-                                <th scope="col">Child Qty</th>
-                                <th scope="col">Place Pick up</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Subtotal</th>
-                            </tr>
-                        </thead>
-
-                        <!-- table data -->
+        {% if cart_items %}
+        <div class="cart-container" >
+            
+            <div class="cart-item-detail table-responsive">
+                <!-- table -->
+                <table class="table">
+                    <thead>
+                        <!-- table head -->
+                        <tr>
+                            <th scope="col">Description</th>
+                            <th scope="col">Excursion Date</th>
+                            <th scope="col">Adult Quantity</th>
+                            <th scope="col">Child Quantity</th>
+                            <th scope="col">Pick up</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Sub-Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                         {% for item in cart_items %}
                         <tr>
-                            <td class="cart-humbnail "><img class="rounded" src="{{item.excursion.main_image.url}}"
-                                    alt="{{item.excursion.image_name}}"></td>
+                            <th><img class="cart-detail-img" src="{{item.excursion.main_image.url}}"
+                                    alt="{{item.excursion.image_name}}"></th>
                             <td>{{item.values.excursion_date}}</td>
-                            <td>{{item.values.adult_qty}}</td>
-                            <td>{{item.values.child_qty}}</td>
+                            <td><i class="fa-solid fa-square-minus cart-default-color"></i> <span
+                                    class="p-2">{{item.values.adult_qty}}</span> <i
+                                    class="fa-solid fa-square-plus cart-default-color"></i></td>
+                            <td><i class="fa-solid fa-square-minus cart-default-color"></i><span
+                                    class="p-2">{{item.values.child_qty}}</span> <i
+                                    class="fa-solid fa-square-plus cart-default-color"></i></td>
                             <td>{{item.values.place_pickup}}</td>
                             <td>£{{item.values.price}}</td>
                             <td>£{{item.subTotal | floatformat:2}}</td>
+                            <td><i class="fa-solid fa-rectangle-xmark cart-icon-x"></i></td>
                         </tr>
                         {% endfor %}
-                        <!-- cart total -->
-                        <tr>
-                            <td colspan="5" class="pt-5">
-                                <h6><strong>Cart Total: ${{ total|floatformat:2 }}</strong></h6>
-                            </td>
-                        </tr>
-                        <!-- keep shopping and Secure Checkout -->
-                        <tr>
-                            <td colspan="5" class="text-right">
-                                <a href="{% url 'excursions' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <a href="" class="btn btn-black rounded-0 btn-lg">
-                                    <span class="text-uppercase">Secure Checkout</span>
-                                    <span class="icon">
-                                        <i class="fas fa-lock"></i>
-                                    </span>
-                                </a>
-                            </td>
-                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
-                    </table>
-                </div>
-                <!--if cart empty -->
-                {% else %}
-                <p class="lead mb-5 text-center">Your cart is empty</p>
-                <a href="{% url 'excursions' %}" class="btn btn-outline-black rounded-o">
+            <div class="cart-price-summary">
+                <h3>Summary</h3>
+                <hr>
+                <!-- cart total -->
+                <div><strong>Total:</strong> <span class="float-right">£{{total | floatformat:2}}</span></div>
+                <hr>
+                <!-- keep shopping and Secure Checkout -->
+                <a href="" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3">
+                    <span class="text-uppercase">Secure Checkout</span>
+                    <span class="icon">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                </a>
+
+                <a href="{% url 'excursions' %}" class="link-side btn my_hover sear-btn btn-outline-secondary mt-3">
                     <span class="icon">
                         <i class="fas fa-chevron-left"></i>
                     </span>
-                    <span class="text-uppercase"> Keep Shopping</span>
+                    <span class="text-uppercase">Keep Shopping</span>
                 </a>
-                {% endif %}
             </div>
 
         </div>
+        <!--if cart empty -->
+        {% else %}
+        <p class="lead mb-5 text-center">Your cart is empty</p>
+        <a href="{% url 'excursions' %}" class="btn btn-outline-black rounded-o">
+            <span class="icon">
+                <i class="fas fa-chevron-left"></i>
+            </span>
+            <span class="text-uppercase"> Keep Shopping</span>
+        </a>
+        {% endif %}
+
     </div>
 </section>
 {% endblock content %}
