--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -50,7 +50,7 @@ body {
 }
 /* --------------------------------------------------------------------  404 and 500 error page*/
 
-#error-404-container {
+#error-404-container{
   width: 50%;
   margin: 10px auto;
 }
@@ -177,6 +177,7 @@ body {
 }
 
 /* -------------------------------------------------------------------- home /excursion / rentals card */
+
 /* Slides */
 .home-banner h2 {
     font-family: "Qwitcher Grypen", sans-serif;
@@ -315,21 +316,67 @@ body {
 .red {
     background-color: #f44336;
 }
+
 /* ------------------------------------Cart */
 .cart{
     position: relative;
 }
-.cart_quantity{
-    background-color: var(--orange-pantone);
-    width:25px;
-    height:25px;
-    border-radius: 50%;
-    position: absolute;
-    left:15px;
-    top:20px;
-    color:white;
-    line-height: 10px 50px;
-    padding-left: 8px;
+
+.site-default-color{
+    color:var(--orange-pantone)
+}
+
+.cart-item-detail{
+    background-color: var(--white);
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+}
+.cart-detail-img{
+    width:150px;
+}
+.cart-detail-header,
+.cart-detail-subcontainer{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    column-gap: 20px;
+}
+
+.cart-icon-x{
+    color: red;
+}
+.cart-icon-x:hover{
+    color: rgb(243, 136, 136);
+    cursor: pointer;
+}
+.cart-default-color{
+    color:var(--orange-pantone);
+    font-size: 20px;
+}
+.cart-default-color:hover{
+    color:#f58758 ;
+    cursor: pointer;
+}
+
+.cart-price-summary{
+    border-radius: 10px;
+    padding: 20px;
+    width:300px;
+    background-color: var(--white);
+    float: left;
+    margin: 10px;
+}
+.float-right{
+    float:right;
+}
+.link-side{
+    width: 100%;
+}
+.cart-container{
+    overflow: hidden;
+    padding-left:35px;
+    display: grid;
+    grid-template-columns: auto auto;
 }
 
 
@@ -402,7 +449,7 @@ body {
 .item-detail {
     padding: 1.5rem;
     width: 420px;
-    height: 500px;
+    height: 540px;
 }
 
 .photos {
@@ -577,6 +624,11 @@ body {
     margin: auto;
 }
 
+
+.form_detail_btn{
+display: grid;
+grid-template-columns: auto auto;
+}
 /* -------------------------------------------------------------------- accounts signup/signin etc */
 
 .user_card {
@@ -880,6 +932,10 @@ ul.socialaccount_providers {
         display: grid;
         grid-template-columns: auto auto auto auto;
     }
+    .cart-container{
+        grid-template-columns: auto;
+    }
+    
 }
 
 /* medium devices (988px and down) */
@@ -926,11 +982,12 @@ ul.socialaccount_providers {
         width: 700px;
     }
 
- /* 404 error */
+   /* 404 error */
   .card img {
     width: 100%;
     margin: auto;
   }
+
 
 
 }
@@ -998,6 +1055,8 @@ ul.socialaccount_providers {
     font-size: 14px;
     font-weight: bold;
   }
+
+
 
 }
 
@@ -1111,6 +1170,10 @@ ul.socialaccount_providers {
   
     .contact_word {
       font-size: 30px;
+    }
+    .cart-price-summary{
+        width:100%;
+        float: none;
     }
   
   }
