--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -14,8 +14,8 @@
         </div>
 
         {% if cart_items %}
-        <div class="cart-container" >
-            
+        <div class="cart-container">
+
             <div class="cart-item-detail table-responsive">
                 <!-- table -->
                 <table class="table">
@@ -32,21 +32,40 @@
                         </tr>
                     </thead>
                     <tbody>
+
+                        <!-- looping through items in cart -->
                         {% for item in cart_items %}
                         <tr>
                             <th><img class="cart-detail-img" src="{{item.excursion.main_image.url}}"
                                     alt="{{item.excursion.image_name}}"></th>
                             <td>{{item.values.excursion_date}}</td>
-                            <td><i class="fa-solid fa-square-minus cart-default-color"></i> <span
-                                    class="p-2">{{item.values.adult_qty}}</span> <i
-                                    class="fa-solid fa-square-plus cart-default-color"></i></td>
-                            <td><i class="fa-solid fa-square-minus cart-default-color"></i><span
-                                    class="p-2">{{item.values.child_qty}}</span> <i
-                                    class="fa-solid fa-square-plus cart-default-color"></i></td>
-                            <td>{{item.values.place_pickup}}</td>
-                            <td>£{{item.values.price}}</td>
-                            <td>£{{item.subTotal | floatformat:2}}</td>
-                            <td><i class="fa-solid fa-rectangle-xmark cart-icon-x"></i></td>
+                            <!-- form for updating quantity-->
+                            <form method="POST" action="{% url 'cart_update' item.item_id %}">
+                                {% csrf_token %}
+                                <!-- Adult quantity-->
+                                <td>
+                                    <input type="number" class="form-control cart-input" name="cart-adult_qty"
+                                        value="{{item.values.adult_qty}}" min="0" max="99">
+                                </td>
+                                <!-- Child quantity-->
+
+                                <td>
+                                    <input type="number" class="form-control cart-input" name="cart-child_qty"
+                                        value="{{item.values.child_qty}}" min="0" max="99">
+                                </td>
+
+                                <td>{{item.values.place_pickup}}</td>
+                                <td>£{{item.values.price}}</td>
+                                <td>£{{item.subTotal | floatformat:2}}</td>
+                                
+                                <td><button type="submit" class="update-cart-btn"><i class="fa-solid fa-pen-to-square"></i>Update</button></td>
+
+                                <td><a class="remove-item" data-excursion_id="{{item.item_id}}"> <i
+                                            class="fa-solid fa-rectangle-xmark cart-icon-x"></i> </a></td>
+
+                                <!-- hidden input to get the url-->
+                                <input type="hidden" name="redirect_url" value="{{request.path}}">
+                            </form>
                         </tr>
                         {% endfor %}
                     </tbody>
