--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -66,18 +66,18 @@
                         <!-- form btn -->
                         <div class="form_detail_btn">
                               <!-- go back to keep shopping btn -->
-                        <div class="form-group mt-3">
-                            <a href="{% url 'excursions' %}" class="user_button_sm my_hover btn">
+                        <div class="form-group mt-3 p-2">
+                            <a href="{% url 'excursions' %}" class="user_button  my_hover btn">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
-                                <span class="text-uppercase"> Keep Shopping</span>
+                                <span class="keep-shoping"> Keep Shopping</span>
                             </a>
                         </div>
                         
                          <!-- Submit button -->
-                        <div class="form-group mt-3">
-                            <button type="submit" class="user_button my_hover btn">Add to cart</button>
+                        <div class="form-group mt-3 p-2">
+                            <button type="submit" class="user_button my_hover btn add-cart"><i class="fa-solid fa-cart-plus"></i> Add to cart</button>
                         </div>
 
                         </div>
