Process checkout order, modified models, add row to checkout.html

--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -47,16 +47,19 @@
       <!-- card pytments infomation -->
       <div class="col-md-8 order-md-1">
         <h4 class="mb-3">Contact info</h4>
-        <form  action="{% url 'cart' %}" method="POST" id="payment-form">
+        <form  action=" " method="POST" id="payment-form">
+          {% csrf_token %}
+          <div class="row">
             <div class="col-md-6 mb-3">
               <label for="full_name">Full name *</label>
-              <input type="text" class="form-control" id="full_name" placeholder="Ellon Musk" required>
+              <input type="text" class="form-control" id="full_name" name="full_name" placeholder="Ellon Musk" required>
             </div>
 
             <div class="col-md-6 mb-3">
               <label for="Phone_number">Phone number</label>
-              <input type="text" class="form-control" id="Phone_number" placeholder="Phone number" required>
+              <input type="text" class="form-control" id="Phone_number" name ="Phone_number" placeholder="Phone number" required>
             </div>
+          </div>
           <hr class="mb-4">
           <h4 class="mb-3">Payment</h4>
           <div class="row">
