--- a/templates/checkout/success.html
+++ b/templates/checkout/success.html
@@ -21,7 +21,7 @@
 
                         <strong>Amount paid:</strong>
                         <span>£{{excursion_total | floatformat:2}}</span>
-                        <div class="pt-2">we have sent you an email with all the info</div>
+                        <div class="pt-2">We have sent you an email with all the booking information</div>
                         <div class="mt-5">
                             <a href="{% url 'home' %}">Go to Home</a>
                         </div>
