Add card icons to checkout.html

--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -41,6 +41,13 @@
             <span>Total (GB)</span>
             <strong>£{{total | floatformat:2}}</strong>
           </li>
+               <!-- card icons -->
+               <div class="text-center list-group-item ">
+                <i class="fa fa-cc-visa visa" ></i>
+                <i class="fa fa-cc-amex amex"></i>
+                <i class="fa fa-cc-mastercard mastercard"></i>
+                <i class="fa fa-cc-discover discover"></i>
+            </div>
         </ul>
       </div>
 
